# int20h_2024

./: .dockerignore  .gitignore  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: fly.yaml
backend/: __init__.py  __main__.py  app.py  config.py  exc.py  models.py  types.py  utils.py  wsgi.py
backend/handlers/: auth.py  health.py  lots.py  websocket.py
backend/lib/: apispec.py  auth.py  bets.py  chat.py  lots.py  schemas.py  websocket.py
backend/lib/schemas/: __init__.py  docs.py  validation.py
backend/services/: aws.py  db.py
backend/tests/: conftest.py
config/app/: dev.yaml  prd.yaml
docker/: Dockerfile
frontend/: package.json
frontend/src/: App.module.css  App.tsx  AuthContext.tsx  Router.tsx
frontend/src/components/: index.ts
frontend/src/components/BetsList/: BetsList.tsx  index.tsx
frontend/src/components/Buttons/: Button.module.css  Button.tsx
frontend/src/components/Chat/: Chat.module.css  Chat.tsx  index.tsx
frontend/src/components/Checkbox/: Checkbox.tsx
frontend/src/components/Forms/: AddLotForm.tsx  Form.module.css  SignInForm.tsx  SignUpForm.tsx  SingUpForm.module.css
frontend/src/hooks/: index.ts  useAuction.ts  useAuth.ts  useChat.ts
frontend/src/lib/: ws.ts
frontend/src/pages/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: dates.ts
migrations/versions/: 6466f2b96d33_message_table.py  69c577410b04_start_price_for_lot.py  6b8dc774af1c_bigger_password_field.py  73bb780766be_user_table.py  7b8c1a8e2bf6_lot_tables.py  d630e4782876_table_name.py  ef3a39b91320_login_email.py
(+23 files in other folders)
