[project]
name = "int20h_2024"
version = "0.1.0"
description = "INT20H test task"
authors = [
    {name = "frolkin28", email = "frolkin2801@gmail.com"},
    {name = "frolkin28", email = "frolkin2801@gmail.com"},
]
dependencies = [
    "flask>=3.0.2",
    "Flask-SQLAlchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "Flask-Migrate>=4.0.5",
    "pyyaml>=6.0.1",
    "marshmallow>=3.20.2",
    "apispec>=6.4.0",
    "Flask-JWT-Extended>=4.6.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
